--- a/changelog/v2.0.md
+++ b/changelog/v2.0.md
@@ -5,7 +5,15 @@ All notable changes to this project for v2.0.Z will be documented in this file.
 The format is based on [Keep a Changelog](https://keepachangelog.com/en/1.0.0/),
 and this project adheres to [Semantic Versioning](https://semver.org/spec/v2.0.0.html).
 
+## [2.0.4] - 2022-01-27
+
+### Changed
+
+- Added pod anti-affinity.
+
 ## [2.0.3] - 2022-01-07
+
+### Changed
 
 - CAPMC version to 1.32.0 for CVE fixes
 
