--- a/changelog/v3.0.md
+++ b/changelog/v3.0.md
@@ -5,6 +5,12 @@ All notable changes to this project for v3.0.Z will be documented in this file.
 The format is based on [Keep a Changelog](https://keepachangelog.com/en/1.0.0/),
 and this project adheres to [Semantic Versioning](https://semver.org/spec/v2.0.0.html).
 
+## [3.0.7] - 2022-12-07
+
+### Changed
+
+- Updated CAPMC CT tests to use hms-test:4.0.0 image for HMTH
+
 ## [3.0.6] - 2022-08-01
 
 ### Changed
