--- a/changelog/v4.0.md
+++ b/changelog/v4.0.md
@@ -5,6 +5,13 @@ All notable changes to this project for v4.0.Z will be documented in this file.
 The format is based on [Keep a Changelog](https://keepachangelog.com/en/1.0.0/),
 and this project adheres to [Semantic Versioning](https://semver.org/spec/v2.0.0.html).
 
+## [4.0.2] - 2023-02-28
+
+### Fixed
+
+- Fixed bug in CT tests that use multiple verify response functions
+- Pulled get_power_cap_capabilities test into separate test stage
+
 ## [4.0.1] - 2023-01-13
 
 ### Changed
