--- a/changelog/v5.0.md
+++ b/changelog/v5.0.md
@@ -9,4 +9,4 @@ and this project adheres to [Semantic Versioning](https://semver.org/spec/v2.0.0
 
 ### Changed
 
-- Update cray-service chart to ~10.0.6 and docker-kubectl image to 1.24.17
+- Update cray-service chart to ~10.0.6
