--- a/changelog/v5.1.md
+++ b/changelog/v5.1.md
@@ -13,3 +13,4 @@ and this project adheres to [Semantic Versioning](https://semver.org/spec/v2.0.0
 - Various code changes to accomodate module updates
 - Resolved build warnings in Dockerfiles and docker compose files
 - Update version of Go to v1.23
+- Chart: Update charts_lint_test_scan.yaml github workflow from v2 to v4
