--- a/changelog/v5.1.md
+++ b/changelog/v5.1.md
@@ -5,6 +5,13 @@ All notable changes to this project for v5.1.Z will be documented in this file.
 The format is based on [Keep a Changelog](https://keepachangelog.com/en/1.0.0/),
 and this project adheres to [Semantic Versioning](https://semver.org/spec/v2.0.0.html).
 
+## [5.1.1] - 2025-05-14
+
+### Updated
+
+- Updated cray-service dependency to the latest version
+- Internal tracking ticket: CASMHMS-6512
+
 ## [5.1.0] - 2025-03-11
 
 ### Security
