--- a/changelog/v5.1.md
+++ b/changelog/v5.1.md
@@ -5,6 +5,16 @@ All notable changes to this project for v5.1.Z will be documented in this file.
 The format is based on [Keep a Changelog](https://keepachangelog.com/en/1.0.0/),
 and this project adheres to [Semantic Versioning](https://semver.org/spec/v2.0.0.html).
 
+## [5.1.2] - 2025-05-30
+
+### Updated
+
+- Updated image and module dependencies
+- Updated Go vo v1.24
+- Explicitly closed all request and response bodies using hms-base functions
+- Fixed bug with jq use in runSnyk.sh
+- Internal tracking ticket: CASMHMS-6390
+
 ## [5.1.1] - 2025-05-14
 
 ### Updated
