--- a/changelog/v5.0.md
+++ b/changelog/v5.0.md
@@ -10,6 +10,7 @@ and this project adheres to [Semantic Versioning](https://semver.org/spec/v2.0.0
 ### Fixed
 
 - Convert PCS status requests from GET to POST
+- Update CT docker-compose file to use CSM 1.6.3 versions of HMS services
 - Internal tracking ticket: CASMHMS-6570
 
 ## [5.0.0] - 2024-08-30
