CASMHMS-6570: Update chart build usage of k8s_api_checker.yaml workflow from v2 to v4

--- a/changelog/v5.1.md
+++ b/changelog/v5.1.md
@@ -10,6 +10,7 @@ and this project adheres to [Semantic Versioning](https://semver.org/spec/v2.0.0
 ### Fixed
 
 - Convert PCS status requests from GET to POST
+- Update chart build usage of k8s_api_checker.yaml workflow from v2 to v4
 - Internal tracking ticket: CASMHMS-6570
 
 ## [5.1.2] - 2025-05-29
