--- a/changelog/v5.0.md
+++ b/changelog/v5.0.md
@@ -5,6 +5,15 @@ All notable changes to this project for v5.0.Z will be documented in this file.
 The format is based on [Keep a Changelog](https://keepachangelog.com/en/1.0.0/),
 and this project adheres to [Semantic Versioning](https://semver.org/spec/v2.0.0.html).
 
+## [5.0.1] - 2025-08-19
+
+### Fixed
+
+- Convert PCS status requests from GET to POST
+- Update CT docker-compose file to use CSM 1.6.3 versions of HMS services
+- Update chart build usage of k8s_api_checker.yaml workflow from v2 to v4
+- Internal tracking ticket: CASMHMS-6570
+
 ## [5.0.0] - 2024-08-30
 
 ### Changed
