--- a/changelog/v5.1.md
+++ b/changelog/v5.1.md
@@ -5,6 +5,14 @@ All notable changes to this project for v5.1.Z will be documented in this file.
 The format is based on [Keep a Changelog](https://keepachangelog.com/en/1.0.0/),
 and this project adheres to [Semantic Versioning](https://semver.org/spec/v2.0.0.html).
 
+## [5.1.4] - 2025-09-26
+
+### Security
+
+- Updated Alpine base image to pick up security fixes
+- Updated HMS image and Go module version dependencies
+- Internal tracking ticket: CASMHMS-6602
+
 ## [5.1.3] - 2025-08-19
 
 ### Fixed
